--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://lahiruhet.github.io",
   "type": "module",
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -15,6 +18,7 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.1",
     "@primer/octicons-react": "^19.4.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.0.3"
